apollo-federation/src/connectors/validation/snapshots/validation_tests@body_selection_v0_4.graphql.snap
---
source: apollo-federation/src/connectors/validation/mod.rs
expression: result.errors
input_file: apollo-federation/src/connectors/validation/test_data/body_selection_v0_4.graphql
---
[
    Message {
        code: InvalidBody,
        message: "In `@connect(http: {body:})` on `Query.dollar`: `$root` must start with one of $args, $config, $context, $request, $env",
        locations: [
            12:20..12:21,
        ],
    },
    Message {
        code: InvalidBody,
        message: "In `@connect(http: {body:})` on `Query.dollarField`: `foo` must start with one of $args, $config, $context, $request, $env",
        locations: [
            20:22..20:25,
        ],
    },
    Message {
        code: InvalidBody,
        message: "In `@connect(http: {body:})` on `Query.objectLiteralWithArrowMethod`: Method ->no_such_method not found",
        locations: [
            55:49..55:63,
        ],
    },
    Message {
        code: InvalidBody,
        message: "In `@connect(http: {body:})` on `Query.invalidVariable`: unknown variable `$nosuchvariable`, must be one of $args, $config, $context, $request, $env",
        locations: [
            63:30..63:45,
        ],
    },
]
