apollo-federation/src/connectors/validation/snapshots/validation_tests@book_product_interface.graphql.snap
---
source: apollo-federation/src/connectors/validation/mod.rs
expression: "format!(\"{:#?}\", result.errors)"
input_file: apollo-federation/src/connectors/validation/test_data/book_product_interface.graphql
---
[]
