apollo-federation/src/connectors/validation/snapshots/validation_tests@circular_reference.graphql.snap
---
source: apollo-federation/src/connectors/validation/mod.rs
expression: result.errors
input_file: apollo-federation/src/connectors/validation/test_data/circular_reference.graphql
---
[
    Message {
        code: CircularReference,
        message: "Circular reference detected in `@connect(selection:)` on `Query.me`: type `User` appears more than once in `Query.me.friends`. For more information, see https://go.apollo.dev/connectors/limitations#circular-references",
        locations: [
            9:65..9:77,
            14:5..14:22,
        ],
    },
]
