apollo-federation/src/connectors/validation/snapshots/validation_tests@circular_reference_3.graphql.snap
---
source: apollo-federation/src/connectors/validation/mod.rs
expression: result.errors
input_file: apollo-federation/src/connectors/validation/test_data/circular_reference_3.graphql
---
[]
