apollo-federation/src/connectors/validation/snapshots/validation_tests@connect_source_name_mismatch.graphql.snap
---
source: apollo-federation/src/connectors/validation/mod.rs
expression: "format!(\"{:#?}\", result.errors)"
input_file: apollo-federation/src/connectors/validation/test_data/connect_source_name_mismatch.graphql
---
[
    Message {
        code: SourceNameMismatch,
        message: "`@connect(source: \"v1\")` on `Query.resources` does not match any defined sources. Did you mean \"v2\"?",
        locations: [
            10:14..10:26,
        ],
    },
]
